--- a/src/Jamesnet.Platform.WPF/Themes/Generic.xaml
+++ b/src/Jamesnet.Platform.WPF/Themes/Generic.xaml
@@ -3,6 +3,20 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:Jamesnet.Platform.Wpf">
 
+    <Style TargetType="{x:Type local:AnimatedWPFLayer}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:AnimatedWPFLayer}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style TargetType="{x:Type local:WPFLayer}">
         <Setter Property="Template">
             <Setter.Value>
